--- a/README
+++ b/README
@@ -29,3 +29,4 @@ The following options exist for the flask_small theme:
    index_logo_height = 120px    height of the index logo
    github_fork = ''             repository name on github for the
                                 "fork me" badge
+   page_width = 700px;          width of the page;
